# datahack-nlp

./: .gitignore  README.md  compute_aggregate.py  compute_metrics.py  extract_vowels.py  isolate_vowels.py  phoneme_player.html  pyproject.toml  run_whisperx.py  server.py  vowels.csv  whisperx_output.json
outdated/: main.py
output/: Aardema_maiden_t.csv  Aardema_maiden_t_metrics.csv  Aardema_maiden_t_metrics_agg.csv
